# parse-hcl

./: .gitignore  AGENTS.md  README.md
docs/: AGENTS.md
python/: .gitignore  README.md  deploy.sh  pyproject.toml
python/src/parse_hcl/: __init__.py  artifact_parsers.py  block_scanner.py  body_parser.py  cli.py  errors.py  fs_utils.py  generic_parsers.py  graph.py  lexer.py  locals_parser.py  logger.py  output_parser.py  serializer.py  terraform_json_parser.py  terraform_parser.py  value_classifier.py  value_helpers.py  variable_parser.py
python/src/parse_hcl/parsers/: __init__.py  generic_parser.py  locals_parser.py  output_parser.py  variable_parser.py
python/src/parse_hcl/services/: __init__.py  artifact_parsers.py  terraform_json_parser.py  terraform_parser.py
python/src/parse_hcl/types/: __init__.py
python/src/parse_hcl/utils/: __init__.py  output_metadata.py
python/src/parse_hcl/utils/common/: __init__.py  errors.py  fs.py  logger.py  value_helpers.py
python/src/parse_hcl/utils/graph/: __init__.py  graph_builder.py
python/src/parse_hcl/utils/lexer/: __init__.py  block_scanner.py  hcl_lexer.py
python/src/parse_hcl/utils/parser/: __init__.py  body_parser.py  value_classifier.py
python/src/parse_hcl/utils/serialization/: __init__.py  serializer.py  yaml.py
python/tests/: __init__.py  test_artifacts_and_graph.py  test_edge_cases.py  test_error_handling.py  test_hcl_lexer.py  test_integration_comprehensive.py  test_json_parsers.py  test_terraform_parser.py  test_value_classifier.py  test_value_classifier_comprehensive.py
python/tests/fixtures/: config.tf.json  data.tf  dynamic.tf  vars.auto.tfvars.json
python/tests/fixtures/nested/: child.tf
typescript/: .gitignore  README.md  deploy.sh  eslint.config.mjs  package.json  tsconfig.examples.json  tsconfig.json
typescript/examples/: runExample.ts  usageArtifacts.ts  usageBasic.ts
typescript/examples/terraform/: main.tf  outputs.tf  variables.tf  vars.auto.tfvars
typescript/src/: cli.ts  index.ts
typescript/src/examples/: runExample.ts
typescript/src/parsers/: genericParser.js  genericParser.ts  localsParser.js  localsParser.ts  outputParser.js  outputParser.ts  variableParser.js  variableParser.ts
typescript/src/services/: artifactParsers.js  artifactParsers.ts  terraformJsonParser.js  terraformJsonParser.ts  terraformParser.js  terraformParser.ts
typescript/src/types/: artifacts.ts  blocks.js  blocks.ts
typescript/src/utils/: blockScanner.js  blockScanner.ts  bodyParser.js  bodyParser.ts  errors.ts  fs.js  fs.ts  graphBuilder.js  graphBuilder.ts  logger.js  logger.ts  outputMetadata.ts  serializer.js  serializer.ts  valueClassifier.js  valueClassifier.ts  valueHelpers.js  valueHelpers.ts  yaml.js  yaml.ts
typescript/test/: artifactParsers.test.ts  comprehensive.test.ts  jsonParsers.test.ts  terraformParser.test.ts  valueClassifier.test.ts
typescript/test/fixtures/: advanced.tf  depends_on.tf  main.tf  plan.json  terraform.tfstate
typescript/test/integration/: comprehensive.test.ts
typescript/test/unit/: artifactParsers.test.ts  jsonParsers.test.ts  (+3 more)
(+11 files in other folders)
