[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "parse-hcl"
version = "1.0.0"
description = "CLI-first Terraform/HCL parser for Python with JSON/YAML output, dependency graphs, and per-file metadata."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Juan Lee", email = "juan.lee@sigmoid.us" }]
keywords = [
  "terraform",
  "hcl",
  "terraform parser",
  "iac",
  "infrastructure-as-code",
  "tfvars",
  "tfstate",
  "plan",
  "plan.json",
  "cli",
  "json",
  "yaml",
  "dependency graph",
  "static analysis"
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/sigmoid-hq/parse-hcl"
Repository = "https://github.com/sigmoid-hq/parse-hcl"

[project.scripts]
parse-hcl = "parse_hcl.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
